--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=OpenSchoolStarter
+# Enabling http logging
+http.logging.enabled=true
+# Enabling http logging headers
+http.logging.logHeaders=true
+
